--- a/index.html
+++ b/index.html
@@ -680,14 +680,55 @@
             </div>
           </div>
           <div class="skill">
-            <h3>Java <span>80%</span></h3>
+            <h3>Java & c++ <span>65%</span></h3>
             <div class="the-progress">
-              <span style="width: 80%" data-width="80%"></span>
+              <span style="width: 65%" data-width="65%"></span>
             </div>
           </div>
         </div>
       </div>
     </div>
     <!-- End Skills -->
+    <!-- Start working stepa -->
+
+    <div class="work-steps" id="work-steps">
+      <h2 class="main-title">How It Works ?</h2>
+      <div class="container">
+        <img src="imgs/work-steps.png" alt="" class="image" />
+        <div class="info">
+          <div class="box">
+            <img src="imgs/work-steps-1.png" alt="" />
+            <div class="text">
+              <h3>Business Analysis</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="imgs/work-steps-2.png" alt="" />
+            <div class="text">
+              <h3>Architecture</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="imgs/work-steps-3.png" alt="" />
+            <div class="text">
+              <h3>Developement</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End working stepa -->
   </body>
 </html>
