--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <title>SterCoder Template One</title>
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <!-- Font Awesome  -->
+    <link rel="stylesheet" href="css/stercoder.css" />
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="css/all.min.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,11 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <title>SterCoder Template One</title>
   </head>
-
   <body>
-    <!-- Start Header  -->
+    <!-- Start Header -->
     <div class="header" id="header">
       <div class="container">
         <a href="#" class="logo">Stercoder</a>
@@ -30,10 +28,10 @@
           <li><a href="#features">Features</a></li>
           <li>
             <a href="#">Other Links</a>
-            <!-- Start MegaMenu -->
+            <!-- Start Megamenu -->
             <div class="mega-menu">
               <div class="image">
-                <img src="imgs/megamenu.png" alt="" />
+                <img src="imgs/megamenu.png" alt="Stercoder megamenu" />
               </div>
               <ul class="links">
                 <li>
@@ -90,24 +88,24 @@
                 </li>
               </ul>
             </div>
-            <!-- End MegaMenu -->
+            <!-- End Megamenu -->
           </li>
         </ul>
       </div>
     </div>
-    <!-- End Header  -->
+    <!-- End Header -->
     <!-- Start Landing -->
     <div class="landing">
       <div class="container">
         <div class="text">
-          <h1>Welcome, To Elzero World</h1>
+          <h1>Welcome, To <span>Stercoder</span> World</h1>
           <p>
             Here Iam gonna share everything about my life. Books Iam reading,
             Games Iam Playing, Stories and Events
           </p>
         </div>
         <div class="image">
-          <img src="imgs/landing-image.png" alt="" />
+          <img src="imgs/landing-image.png" alt="Stercoder Landing" />
         </div>
       </div>
       <a href="#articles" class="go-down">
@@ -120,7 +118,7 @@
       <h2 class="main-title">Articles</h2>
       <div class="container">
         <div class="box">
-          <img src="imgs/cat-01.jpg" alt="" />
+          <img src="imgs/cat-01.jpg" alt="Stercoder IMAGE ARTICLE 1" />
           <div class="content">
             <h3>Test Title</h3>
             <p>
@@ -134,7 +132,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="imgs/cat-02.jpg" alt="" />
+          <img src="imgs/cat-02.jpg" alt="Stercoder IMAGE ARTICLE 2" />
           <div class="content">
             <h3>Test Title</h3>
             <p>
@@ -148,7 +146,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="imgs/cat-03.jpg" alt="" />
+          <img src="imgs/cat-03.jpg" alt="Stercoder IMAGE ARTICLE 3" />
           <div class="content">
             <h3>Test Title</h3>
             <p>
@@ -162,7 +160,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="imgs/cat-04.jpg" alt="" />
+          <img src="imgs/cat-04.jpg" alt="Stercoder IMAGE ARTICLE 4" />
           <div class="content">
             <h3>Test Title</h3>
             <p>
@@ -176,7 +174,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="imgs/cat-05.jpg" alt="" />
+          <img src="imgs/cat-05.jpg" alt="Stercoder IMAGE ARTICLE 5" />
           <div class="content">
             <h3>Test Title</h3>
             <p>
@@ -190,7 +188,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="imgs/cat-06.jpg" alt="" />
+          <img src="imgs/cat-06.jpg" alt="Stercoder IMAGE ARTICLE 6" />
           <div class="content">
             <h3>Test Title</h3>
             <p>
@@ -204,7 +202,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="imgs/cat-07.jpg" alt="" />
+          <img src="imgs/cat-07.jpg" alt="Stercoder IMAGE ARTICLE 7" />
           <div class="content">
             <h3>Test Title</h3>
             <p>
@@ -218,7 +216,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="imgs/cat-08.jpg" alt="" />
+          <img src="imgs/cat-08.jpg" alt="Stercoder IMAGE ARTICLE 8" />
           <div class="content">
             <h3>Test Title</h3>
             <p>
@@ -233,6 +231,7 @@
         </div>
       </div>
     </div>
+    <div class="spikes"></div>
     <!-- End Articles -->
     <!-- Start Gallery -->
     <div class="gallery" id="gallery">
@@ -240,32 +239,32 @@
       <div class="container">
         <div class="box">
           <div class="image">
-            <img src="imgs/gallery-01.png" alt="" />
+            <img src="imgs/gallery-01.png" alt="Stercoder IMAGE Gallery 1" />
           </div>
         </div>
         <div class="box">
           <div class="image">
-            <img src="imgs/gallery-02.png" alt="" />
+            <img src="imgs/gallery-02.png" alt="Stercoder IMAGE Gallery 2" />
           </div>
         </div>
         <div class="box">
           <div class="image">
-            <img src="imgs/gallery-03.jpg" alt="" />
+            <img src="imgs/gallery-03.jpg" alt="Stercoder IMAGE Gallery 3" />
           </div>
         </div>
         <div class="box">
           <div class="image">
-            <img src="imgs/gallery-04.png" alt="" />
+            <img src="imgs/gallery-04.png" alt="Stercoder IMAGE Gallery 4" />
           </div>
         </div>
         <div class="box">
           <div class="image">
-            <img src="imgs/gallery-05.jpg" alt="" />
+            <img src="imgs/gallery-05.jpg" alt="Stercoder IMAGE Gallery 5" />
           </div>
         </div>
         <div class="box">
           <div class="image">
-            <img src="imgs/gallery-06.png" alt="" />
+            <img src="imgs/gallery-06.png" alt="Stercoder IMAGE Gallery 6" />
           </div>
         </div>
       </div>
@@ -277,36 +276,36 @@
       <div class="container">
         <div class="box quality">
           <div class="img-holder">
-            <img src="imgs/features-01.jpg" alt="" />
+            <img src="imgs/features-01.jpg" alt="Stercoder IMAGE Features 1 " />
           </div>
           <h2>Quality</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum
             hic veniam eligendi minima
           </p>
-          <a href="">More</a>
+          <a href="#">More</a>
         </div>
         <div class="box time">
           <div class="img-holder">
-            <img src="imgs/features-02.jpg" alt="" />
+            <img src="imgs/features-02.jpg" alt="Stercoder IMAGE Features 2" />
           </div>
           <h2>Time</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum
             hic veniam eligendi minima
           </p>
-          <a href="">More</a>
+          <a href="#">More</a>
         </div>
         <div class="box passion">
           <div class="img-holder">
-            <img src="imgs/features-03.jpg" alt="" />
+            <img src="imgs/features-03.jpg" alt="Stercoder IMAGE Features 3" />
           </div>
           <h2>Passion</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum
             hic veniam eligendi minima
           </p>
-          <a href="">More</a>
+          <a href="#">More</a>
         </div>
       </div>
     </div>
@@ -414,7 +413,7 @@
       </div>
     </div>
     <!-- End Testimonials -->
-    <!-- Start  Team -->
+    <!-- Start Team -->
     <div class="team" id="team">
       <h2 class="main-title">Team Members</h2>
       <div class="container">
@@ -604,8 +603,8 @@
         </div>
       </div>
     </div>
+    <div class="spikes"></div>
     <!-- End Team -->
-
     <!-- Start Services -->
     <div class="services" id="services">
       <h2 class="main-title">Services</h2>
@@ -689,8 +688,7 @@
       </div>
     </div>
     <!-- End Skills -->
-    <!-- Start working stepa -->
-
+    <!-- Start Work Steps -->
     <div class="work-steps" id="work-steps">
       <h2 class="main-title">How It Works ?</h2>
       <div class="container">
@@ -729,13 +727,14 @@
         </div>
       </div>
     </div>
-    <!-- End working stepa -->
+    <!-- End Work Steps -->
     <!-- Start Events -->
-
     <div class="events" id="events">
+      <div class="dots dots-up"></div>
+      <div class="dots dots-down"></div>
       <h2 class="main-title">Latest Events</h2>
       <div class="container">
-        <img class=".image" src="imgs/events.png" alt="" />
+        <img src="imgs/events.png" alt="" />
         <div class="info">
           <div class="time">
             <div class="unit">
@@ -771,7 +770,6 @@
       </div>
     </div>
     <!-- End Events -->
-
     <!-- Start Pricing -->
     <div class="pricing" id="pricing">
       <div class="dots dots-up"></div>
@@ -830,7 +828,6 @@
       </div>
     </div>
     <!-- End Pricing -->
-
     <!-- Start Videos -->
     <div class="videos" id="videos">
       <h2 class="main-title">Top Videos</h2>
@@ -859,7 +856,6 @@
       </div>
     </div>
     <!-- End Videos -->
-
     <!-- Start Stats -->
     <div class="stats" id="stats">
       <h2>Our Awesome Stats</h2>
@@ -887,7 +883,6 @@
       </div>
     </div>
     <!-- End Stats -->
-
     <!-- Start Discount -->
     <div class="discount" id="discount">
       <div class="image">
@@ -935,7 +930,6 @@
       </div>
     </div>
     <!-- End Discount -->
-
     <!-- Start Footer -->
     <div class="footer">
       <div class="container">
@@ -976,7 +970,7 @@
           <div class="line">
             <i class="fas fa-map-marker-alt fa-fw"></i>
             <div class="info">
-              Morocco, Agadir, Inside The Street, Room Number 220
+              Egypt, Giza, Inside The Sphinx, Room Number 220
             </div>
           </div>
           <div class="line">
